Calcul temps moyen + nombre de session

--- a/proj.properties
+++ b/proj.properties
@@ -16,7 +16,7 @@
 #doc: la doc en ligne
 #--------------------------------------------------------------------------------------
 #nom du projet (conseil: donner le même nom que le dossier-projet eclipse)
-name=timestamp
+name=Analyse_logs
 #version courante
 version=0.1
 #année
