--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,5 @@
 	<classpathentry kind="lib" path="tools/java-cup-11b.jar"/>
 	<classpathentry kind="lib" path="tools/jflex-1.6.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="build/classes"/>
 </classpath>
