Ajout de la documentation

--- a/proj.properties
+++ b/proj.properties
@@ -3,8 +3,7 @@
 #Commencer par Èditer ce fichier et déterminer
 #les valeurs appropriées à chaque attribut
 #---------------------------------
-#(c) Université de Lorraine, 2013
-#Auteur : Azim Roussanaly
+#Auteur : Matthieu VINCENT
 
 #CONVENTIONS JAVA
 #------------------------------------------------------------------------------------
