Modification de doc

--- a/build.xml
+++ b/build.xml
@@ -14,9 +14,9 @@
 - clean -> supprime tous les fichiers générés
 
   Authors:
-  Azim Roussanaly <Azim.Roussanaly@univ-lorraine.fr>
+  Matthieu VINCENT
 
-  Copyright (c) 2013 - Université de Lorraine
+  Copyright (c) 2017 - Université de Lorraine
   ===================================================================
 -->
 
